updated log in and signup button to match the others, add min-width to sidebar to ensure signup button doesn't get split at the space on smaller screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,17 +80,31 @@
 }
 
 .logout-btn {
-    width: 100%;
-    background-color: #E5E5E5;
+    background-color:  #96b2dc; 
+    /* color: white; */
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.375rem; 
+    font-size: 1rem;
     cursor: pointer;
-    font-size: 15px;
+    transition: background-color 0.2s ease;
 }
 
 .logout-btn:hover {
-    background-color: #96b2dc;
+    background-color: #668fc4;
+}
+
+.logout-btn:active {
+    background-color: #96b2dc; 
+}
+
+.logout-btn:focus {
+    outline: none; 
+    box-shadow: 0 0 0 3px rgba(196, 181, 253, 0.5); 
 }
 
 .sidebar {
+    min-width: 100px;
     width: 250px;
     background-color: #242c45;
     padding: 20px;
@@ -256,23 +270,18 @@ input[type="text"], input[type="email"], input[type="password"] {
 }
 
 .glow-link {
-    color: #0f0e0e; 
-    text-decoration: none;
-    font-size: 1.2rem; 
-    text-shadow: 0 0 5px #ffffff, 
-                 0 0 10px #ffffff, 
-                 0 0 15px #ddeb17, 
-                 0 0 20px #ddeb17, 
-                 0 0 25px #ddeb17; 
-    transition: text-shadow 0.3s ease; 
+    background-color:  #96b2dc; 
+    /* color: white; */
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.375rem; 
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
 }
 
 .glow-link:hover {
-    text-shadow: 0 0 10px #ffffff,
-                 0 0 20px #ffffff,
-                 0 0 30px #080908,
-                 0 0 40px #080908,
-                 0 0 50px #080908;
+    background-color: #3f5a7d;
 }
 
 button.save-entry-btn {
